@@ -3,6 +3,7 @@ package com.sanwenyukaochi.security.exception;
 import com.sanwenyukaochi.security.security.exception.CustomAuthenticationException;
 import com.sanwenyukaochi.security.security.filter.RequestCorrelationIdFilter;
 import com.sanwenyukaochi.security.vo.Result;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.web.firewall.RequestRejectedException;
 import org.springframework.validation.FieldError;
@@ -19,19 +20,15 @@ import java.util.Map;
 @RestControllerAdvice
 public class MyGlobalExceptionHandler {
 
+    // TODO 参数校验异常
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public Result<Object> myMethodArgumentNotValidException(MethodArgumentNotValidException e) {
-        Map<String, String> errors = new HashMap<>();
-        e.getBindingResult().getAllErrors().forEach(err -> {
-            String fieldName = ((FieldError) err).getField();
-            String message = err.getDefaultMessage();
-            errors.put(fieldName, message);
-        });
         return Result.error(400, "参数验证失败")
                 .path(getCurrentRequestPath())
                 .requestId(getRequestId());
     }
 
+    // TODO 资源找不到异常
     @ExceptionHandler(ResourceNotFoundException.class)
     public Result<Object> myResourceNotFoundException(ResourceNotFoundException e) {
         String message = e.getMessage();
@@ -40,6 +37,7 @@ public class MyGlobalExceptionHandler {
                 .requestId(getRequestId());
     }
 
+    // TODO 可以考虑是否删除，如果删除删除对应的 APIException.class
     @ExceptionHandler(APIException.class)
     public Result<Object> myAPIException(APIException e) {
         String message = e.getMessage();
@@ -50,22 +48,20 @@ public class MyGlobalExceptionHandler {
 
     @ExceptionHandler(CustomAuthenticationException.class)
     public Result<Object> handleCustomAuthenticationException(CustomAuthenticationException e) {
-        // 根据异常类型设置不同的主消息
-        String mainMessage = switch (e.getErrorCode()) {
-            case "INVALID_PASSWORD" -> "密码错误";
+        return Result.error(e.getHttpStatus(), switch (e.getErrorCode()) {
             case "USER_NOT_FOUND" -> "用户不存在";
+            case "INVALID_PASSWORD" -> "密码错误";
             case "DISABLED" -> "账户已被禁用";
             case "LOCKED" -> "账户已被锁定";
             case "EXPIRED" -> "账户已过期";
             case "CREDENTIALS_EXPIRED" -> "凭据已过期";
             default -> "认证失败";
-        };
-
-        return Result.error(e.getHttpStatus(), mainMessage)
+        })
                 .path(getCurrentRequestPath())
                 .requestId(getRequestId());
     }
 
+    // TODO 项目交给security处理了，上面有一个自定义的 CustomAuthenticationException.class 这个403处理可以考虑是否删除
     @ExceptionHandler(AccessDeniedException.class)
     public Result<Object> handleAccessDeniedException(AccessDeniedException e) {
         return Result.error(403, "权限不足")
@@ -82,35 +78,27 @@ public class MyGlobalExceptionHandler {
 
     @ExceptionHandler(NoHandlerFoundException.class)
     public Result<Object> handleNoHandlerFoundException(NoHandlerFoundException e) {
-        // 获取请求ID，优先从请求头获取，否则生成新的
-        String requestId = getRequestId();
-        
         return Result.error(404, "接口不存在")
                 .path(getCurrentRequestPath())
-                .requestId(requestId);
+                .requestId(getRequestId());
     }
 
 
-    /**
-     * 获取请求ID
-     */
+    // TODO 或许这里可以优化，如果能保证从RequestCorrelationIdFilter一定能获取到，try chat 可以删除
     private String getRequestId() {
+        String requestId = RequestCorrelationIdFilter.getCurrentRequestId();
+        if (requestId != null && !requestId.isBlank()) {
+            return requestId;
+        }
+        
         try {
-            // 优先从RequestIdFilter获取
-            String requestId = RequestCorrelationIdFilter.getCurrentRequestId();
-            if (requestId != null && !requestId.trim().isEmpty()) {
-                return requestId;
-            }
-            
-            // 备用方案：从请求头获取或生成新的
             ServletRequestAttributes attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
             if (attributes != null) {
-                jakarta.servlet.http.HttpServletRequest request = attributes.getRequest();
+                HttpServletRequest request = attributes.getRequest();
                 requestId = request.getHeader("X-Request-ID");
-                if (requestId == null || requestId.trim().isEmpty()) {
-                    requestId = "req-" + System.currentTimeMillis() + "-" + java.util.UUID.randomUUID().toString().substring(0, 8);
+                if (requestId != null && !requestId.isBlank()) {
+                    return requestId;
                 }
-                return requestId;
             }
         } catch (Exception e) {
             // 忽略异常，避免影响正常业务
@@ -118,9 +106,6 @@ public class MyGlobalExceptionHandler {
         return "req-" + System.currentTimeMillis() + "-" + java.util.UUID.randomUUID().toString().substring(0, 8);
     }
 
-    /**
-     * 获取当前请求路径
-     */
     private String getCurrentRequestPath() {
         try {
             ServletRequestAttributes attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
